# Dawn-of-Stellar

./: .gitignore  CHARACTER_SYSTEM_VERIFICATION_REPORT.md  COMBO_SKILL_DESIGN.md  COMPLETE_JOB_SYSTEM_DESIGN.md  DEPLOYMENT_README.md  DISTRIBUTION_README.md  DOWNLOAD_INSTALL_GUIDE.md  DawnOfStellar.spec  DawnOfStellar_Description.txt  DawnOfStellar_Install_Guide.txt  DawnOfStellar_Update_Guide.txt  GAME_DESCRIPTION.md  GIMMICK_UI_DESIGN.md  INSTALL.md  INSTALLER_README.md  INSTALL_GUIDE.md  INSTALL_README.md  ISSUES.md  JOB_MECHANISM_REDESIGN.md  LAUNCHER_README.md  LINUX_BUILD_GUIDE.md  QUICKSTART.md  README.md  RECIPES.md  RENDERING.md  SKILL_GENERATION_REPORT.md  TEAMWORK_GAUGE_DESIGN.md  TEAMWORK_IMPLEMENTATION_GUIDE.md  UNIMPLEMENTED_TRAITS.md  UPDATE_GUIDE.md  Vampire, Dark Knight Rework.md  WOUND_GAUGE_ISSUE.md  XdevelopDawn-of-Stellarvalidation_results.txt  add_descriptions.py  adjust_enemy_hp_skills.py  build.bat  build.py  build_executable.bat  build_final.bat  build_final_linux.sh  (+55 more)
.claude/: CLAUDE.md  settings.local.json
archive/: CLEANUP_GUIDE.md  FINAL_SUMMARY.md  GEMINI.md  ISSUES.md  JOB_MECHANISM_REDESIGN.md  PROJECT_DESIGN.md  README.md  TCOD_MIGRATION_GUIDE.md  multiplayer  name.txt  story_system_example.py  test_basic_attacks.py  test_enemy_damage.py  test_fixes.py  test_hp_damage.py  test_skill_effects.py  test_status_integration.py  test_support_fire.py
config/: gamepad_mappings.yaml  meta_progress.json  vibration.yaml
data/: cooking_recipes.yaml  passives.yaml  teamwork_skills.yaml
docs/: BASIC_ATTACKS_SYSTEM.md  CHARACTER_MIGRATION.md  DIMENSIONIST_IMPLEMENTATION_SUMMARY.md  DIMENSIONIST_REWORK_DESIGN.md  JOB_MECHANISMS.md  README.md  TUTORIAL_SYSTEM.md  architecture.md  combat-system.md  cooking.md  field_skills_design.md  multiplayer_bug_fixes.md  multiplayer_design.md  multiplayer_how_to_play.md  multiplayer_implementation_status.md  multiplayer_meta_progress_rules.md  multiplayer_p2p_detailed.md  multiplayer_testing_checklist.md  multiplayer_testing_guide.md  multiplayer_testing_tips.md  recipes.md  sound_files_list.md  status_effects_migration.md  tutorial_system_design.md
examples/: tutorial_example.py
scripts/: add_missing_gimmicks.py  add_missing_gimmicks_auto.py  add_slogans.py  add_teamwork_skills.py  analyze_and_balance_mp_costs.py  analyze_job_stats.py  analyze_jobs.py  analyze_skills.py  balance_analyzer.py  balance_mp_costs.py  batch_add_teamwork_skills.py  bdf_to_png.py  calculate_job_stat_totals.py  check_all_job_bonuses.py  check_gamepad.py  check_skill_ids.py  extract_skill_ids.py  fix_basic_attacks_and_reduce_mp.py  fix_syntax_errors.py  fix_yaml_skills.py  generate_job_redesigns.py  generate_skills.py  increase_ultimate_mp.py  quick_gamepad_test.py  quick_test.py  reduce_mp_costs.py  remove_basic_skill_mp_cost.py  remove_cooldowns.py  show_job_profiles.py  test_advanced_bot.py  test_damage_calc.py  test_dimensionist_skills.py  test_enemy_improvements.py  test_equipment_fix.py  test_gamepad.py  test_multiplayer_local.py  test_multiplayer_with_bot.py  test_vibration.py  test_wound_calculation.py  test_wound_gauge.py  (+11 more)
src/: __init__.py
tests/: conftest.py  run_multiplayer_tests.py  test_all_jobs_teamwork.py  test_archer.py  test_auto_harvest_bot.py  test_bard.py  test_berserker.py  test_character_loader.py  test_character_yaml.py  test_combat_full_debug.py  test_combat_startup.py  test_dimensionist.py  test_eventbus_debug.py  test_gladiator.py  test_monk.py  test_multiplayer_basic.py  test_multiplayer_exploration.py  test_multiplayer_integration.py  test_multiplayer_party.py  test_necromancer.py  test_paladin.py  test_party_integration.py  (+8 more)
web/: demo.html  (+5 more)
(+474 files in other folders)
